--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import streamlit as st\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime, timezone\n",
@@ -24,15 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "host = #Add Info\n",
-    "port = #Add Info\n",
-    "dbname = #Add Info\n",
-    "user = #Add Info\n",
-    "password = #Add Info\n",
+    "## PASTE IN CONNECTION DETAILS BELOW\n",
+    "host = ''\n",
+    "port = ''\n",
+    "dbname = ''\n",
+    "user = '' \n",
+    "password = '' \n",
     "\n",
     "def run_query(query):\n",
     "    \"\"\"Run query and return results\"\"\"\n",
@@ -55,7 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## REPLACE QUERY BELOW\n",
+    "\n",
     "sql_query = \"\"\"\n",
+    "\n",
     "SELECT\n",
     "  \"public\".\"Arkham\".\"address\" AS \"address\",\n",
     "  \"public\".\"Arkham\".\"entity_name\" AS \"entity_name\",\n",
@@ -71,6 +65,7 @@
     "WHERE \n",
     " LOWER(\"address\") IN  ('0x9d727911b54c455b0071a7b682fcf4bc444b5596','0x00de4b13153673bcae2616b67bf822500d325fc3','0x616cad18642f45d3fa5fcaad0a2d81764a9cba84', '0xa29744b745800ccd814e6f59271ecd74682eccb0','0xc2fe73ce94a372dae70a64e0d75a58a039227e2a','0x13c74967aec876013d8fbf81485df780d6093527','0x962efc5a602f655060ed83bb657afb6cc4b5883f','0xc9c5721986c923c601c3b625d1107d470df0b123','0x82eb45562f991329ed2867f43fc60f0ba52c3dab','0x12478d6058fcb15bb93e4437951c5c98d1abf563','0x763d7d362b59aea3858a92a302e18cd41b1252d4','0x399e0ae23663f27181ebb4e66ec504b3aab25541','0xd8da6bf26964af9d7eed9e03e53415d37aa96045','0xa005f646b9dc13e1f49b5f53c1c4552fd312f4fd','0x2d7d6ec6198adfd5850d00bd601958f6e316b05e','0xc584f09928d490237831f6e5da805cba82652497')\n",
     " and chain = 'ethereum'\n",
+    " \n",
     "\"\"\""
    ]
   },
