validate dune pipeline

--- a/scripts/dune_testing.ipynb
+++ b/scripts/dune_testing.ipynb
@@ -2,23 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-22 19:18:10,761 INFO numexpr.utils NumExpr defaulting to 8 threads.\n",
-      "2024-10-22 19:18:11,325 INFO __main__ Loaded .env file\n"
+      "2024-11-07 14:27:57,822 INFO __main__ Loaded .env file\n",
+      "2024-11-07 14:27:57,823 INFO __main__ Initializing Dune client\n",
+      "2024-11-07 14:27:57,824 INFO __main__ Fetching latest results from query 4118421\n",
+      "2024-11-07 14:27:58,742 INFO __main__ Successfully retrieved query results\n",
+      "2024-11-07 14:28:03,634 INFO __main__ Successfully uploaded 1939 rows to table allov2_distribution_events_for_leaderboard\n"
      ]
     }
    ],
@@ -27,291 +22,56 @@
     "import pandas as pd\n",
     "import logging\n",
     "import os\n",
+    "from sqlalchemy import create_engine\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
-    "logger = logging.getLogger(__name__)\n",
+    "def main():\n",
+    "    # Set up logging\n",
+    "    logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
+    "    logger = logging.getLogger(__name__)\n",
     "\n",
-    "try:\n",
-    "    from dotenv import load_dotenv\n",
-    "    if load_dotenv():\n",
-    "        logger.info(\"Loaded .env file\")\n",
-    "    else:\n",
-    "        logger.info(\"No .env file found or loaded\")\n",
-    "except ImportError:\n",
-    "    logger.info(\"dotenv not installed, skipping .env file loading\")\n",
+    "    # Load environment variables\n",
+    "    try:\n",
+    "        if load_dotenv():\n",
+    "            logger.info(\"Loaded .env file\")\n",
+    "        else:\n",
+    "            logger.info(\"No .env file found or loaded\")\n",
+    "    except ImportError:\n",
+    "        logger.info(\"dotenv not installed, skipping .env file loading\")\n",
     "\n",
-    "DUNE_API_KEY = os.getenv('DUNE_API_KEY')\n",
-    "dune = DuneClient(DUNE_API_KEY)\n",
-    "query_result = dune.get_latest_result(4118421)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query result time: 2024-10-02 02:16:40.898973+00:00\n"
-     ]
-    }
-   ],
-   "source": [
-    "query_result_time = query_result.times.execution_ended_at\n",
-    "print(f\"Query result time: {query_result_time}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>address</th>\n",
-       "      <th>blockchain</th>\n",
-       "      <th>ens</th>\n",
-       "      <th>number_of_points</th>\n",
-       "      <th>role</th>\n",
-       "      <th>strategy_name</th>\n",
-       "      <th>tx_hash</th>\n",
-       "      <th>tx_timestamp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0x8c180840fcbb90ce8464b4ecd12ab0f840c6647c</td>\n",
-       "      <td>arbitrum</td>\n",
-       "      <td></td>\n",
-       "      <td>593.109281</td>\n",
-       "      <td>contract_dev</td>\n",
-       "      <td>DonationVotingMerkleDistributionDirectTransfer...</td>\n",
-       "      <td>0xe51225539ab9a6797ace9dc406d1c35a25b4b9f3a998...</td>\n",
-       "      <td>2024-09-23 12:58:53.000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0x411f9a3cf8b761c0b29a7c18f0ca228c8e79beb3</td>\n",
-       "      <td>arbitrum</td>\n",
-       "      <td></td>\n",
-       "      <td>637.937090</td>\n",
-       "      <td>grantee</td>\n",
-       "      <td>DonationVotingMerkleDistributionDirectTransfer...</td>\n",
-       "      <td>0xe51225539ab9a6797ace9dc406d1c35a25b4b9f3a998...</td>\n",
-       "      <td>2024-09-23 12:58:53.000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0x8c180840fcbb90ce8464b4ecd12ab0f840c6647c</td>\n",
-       "      <td>arbitrum</td>\n",
-       "      <td></td>\n",
-       "      <td>593.109281</td>\n",
-       "      <td>contract_dev</td>\n",
-       "      <td>DonationVotingMerkleDistributionDirectTransfer...</td>\n",
-       "      <td>0xe51225539ab9a6797ace9dc406d1c35a25b4b9f3a998...</td>\n",
-       "      <td>2024-09-23 12:58:53.000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0xa5bf3bc76efa40bf86adcd6a934f38768a3faa2b</td>\n",
-       "      <td>arbitrum</td>\n",
-       "      <td></td>\n",
-       "      <td>593.109281</td>\n",
-       "      <td>round_operator</td>\n",
-       "      <td>DonationVotingMerkleDistributionDirectTransfer...</td>\n",
-       "      <td>0xe51225539ab9a6797ace9dc406d1c35a25b4b9f3a998...</td>\n",
-       "      <td>2024-09-23 12:58:53.000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0xcd45e627e37b7f85266f4a9c6d3255f5f6448d6a</td>\n",
-       "      <td>arbitrum</td>\n",
-       "      <td></td>\n",
-       "      <td>548.281473</td>\n",
-       "      <td>grantee</td>\n",
-       "      <td>DonationVotingMerkleDistributionDirectTransfer...</td>\n",
-       "      <td>0xe51225539ab9a6797ace9dc406d1c35a25b4b9f3a998...</td>\n",
-       "      <td>2024-09-23 12:58:53.000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1792</th>\n",
-       "      <td>0x0dcfa173c7a786844a122d92f3d83e0d5b8e438a</td>\n",
-       "      <td>arbitrum</td>\n",
-       "      <td></td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>grantee</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x4e05f09c886a8a43a683b14acab78ba96b1dcd2d2cfe...</td>\n",
-       "      <td>2024-03-29 00:02:54.000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1793</th>\n",
-       "      <td>0x01ae8d6d0f137cf946e354ea707b698e8cae6485</td>\n",
-       "      <td>arbitrum</td>\n",
-       "      <td>maslineze.eth</td>\n",
-       "      <td>5.871555</td>\n",
-       "      <td>grantee</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0xd5d2b5be78e948d40013442ba6df4ab9bf08f95b93c1...</td>\n",
-       "      <td>2024-03-10 16:22:58.000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1794</th>\n",
-       "      <td>0x01ae8d6d0f137cf946e354ea707b698e8cae6485</td>\n",
-       "      <td>arbitrum</td>\n",
-       "      <td>maslineze.eth</td>\n",
-       "      <td>5.857860</td>\n",
-       "      <td>grantee</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x2d28527707ec7c60365f9e26335093ddacd645d55441...</td>\n",
-       "      <td>2024-03-10 16:12:50.000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1795</th>\n",
-       "      <td>0x01ae8d6d0f137cf946e354ea707b698e8cae6485</td>\n",
-       "      <td>arbitrum</td>\n",
-       "      <td>maslineze.eth</td>\n",
-       "      <td>16.192050</td>\n",
-       "      <td>grantee</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0xfe1eceaae72fa6e41728c02588052c96f5f05b0c30e4...</td>\n",
-       "      <td>2024-02-27 17:36:59.000 UTC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1796</th>\n",
-       "      <td>0x2cde9919e81b20b4b33dd562a48a84b54c48f00c</td>\n",
-       "      <td>arbitrum</td>\n",
-       "      <td></td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>grantee</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x8f7864c8541ad6ff3c1af8bcae651c30364249331083...</td>\n",
-       "      <td>2024-01-11 04:12:14.000 UTC</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1797 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         address blockchain            ens  \\\n",
-       "0     0x8c180840fcbb90ce8464b4ecd12ab0f840c6647c   arbitrum                  \n",
-       "1     0x411f9a3cf8b761c0b29a7c18f0ca228c8e79beb3   arbitrum                  \n",
-       "2     0x8c180840fcbb90ce8464b4ecd12ab0f840c6647c   arbitrum                  \n",
-       "3     0xa5bf3bc76efa40bf86adcd6a934f38768a3faa2b   arbitrum                  \n",
-       "4     0xcd45e627e37b7f85266f4a9c6d3255f5f6448d6a   arbitrum                  \n",
-       "...                                          ...        ...            ...   \n",
-       "1792  0x0dcfa173c7a786844a122d92f3d83e0d5b8e438a   arbitrum                  \n",
-       "1793  0x01ae8d6d0f137cf946e354ea707b698e8cae6485   arbitrum  maslineze.eth   \n",
-       "1794  0x01ae8d6d0f137cf946e354ea707b698e8cae6485   arbitrum  maslineze.eth   \n",
-       "1795  0x01ae8d6d0f137cf946e354ea707b698e8cae6485   arbitrum  maslineze.eth   \n",
-       "1796  0x2cde9919e81b20b4b33dd562a48a84b54c48f00c   arbitrum                  \n",
-       "\n",
-       "      number_of_points            role  \\\n",
-       "0           593.109281    contract_dev   \n",
-       "1           637.937090         grantee   \n",
-       "2           593.109281    contract_dev   \n",
-       "3           593.109281  round_operator   \n",
-       "4           548.281473         grantee   \n",
-       "...                ...             ...   \n",
-       "1792          0.000000         grantee   \n",
-       "1793          5.871555         grantee   \n",
-       "1794          5.857860         grantee   \n",
-       "1795         16.192050         grantee   \n",
-       "1796          0.000000         grantee   \n",
-       "\n",
-       "                                          strategy_name  \\\n",
-       "0     DonationVotingMerkleDistributionDirectTransfer...   \n",
-       "1     DonationVotingMerkleDistributionDirectTransfer...   \n",
-       "2     DonationVotingMerkleDistributionDirectTransfer...   \n",
-       "3     DonationVotingMerkleDistributionDirectTransfer...   \n",
-       "4     DonationVotingMerkleDistributionDirectTransfer...   \n",
-       "...                                                 ...   \n",
-       "1792                                               None   \n",
-       "1793                                               None   \n",
-       "1794                                               None   \n",
-       "1795                                               None   \n",
-       "1796                                               None   \n",
-       "\n",
-       "                                                tx_hash  \\\n",
-       "0     0xe51225539ab9a6797ace9dc406d1c35a25b4b9f3a998...   \n",
-       "1     0xe51225539ab9a6797ace9dc406d1c35a25b4b9f3a998...   \n",
-       "2     0xe51225539ab9a6797ace9dc406d1c35a25b4b9f3a998...   \n",
-       "3     0xe51225539ab9a6797ace9dc406d1c35a25b4b9f3a998...   \n",
-       "4     0xe51225539ab9a6797ace9dc406d1c35a25b4b9f3a998...   \n",
-       "...                                                 ...   \n",
-       "1792  0x4e05f09c886a8a43a683b14acab78ba96b1dcd2d2cfe...   \n",
-       "1793  0xd5d2b5be78e948d40013442ba6df4ab9bf08f95b93c1...   \n",
-       "1794  0x2d28527707ec7c60365f9e26335093ddacd645d55441...   \n",
-       "1795  0xfe1eceaae72fa6e41728c02588052c96f5f05b0c30e4...   \n",
-       "1796  0x8f7864c8541ad6ff3c1af8bcae651c30364249331083...   \n",
-       "\n",
-       "                     tx_timestamp  \n",
-       "0     2024-09-23 12:58:53.000 UTC  \n",
-       "1     2024-09-23 12:58:53.000 UTC  \n",
-       "2     2024-09-23 12:58:53.000 UTC  \n",
-       "3     2024-09-23 12:58:53.000 UTC  \n",
-       "4     2024-09-23 12:58:53.000 UTC  \n",
-       "...                           ...  \n",
-       "1792  2024-03-29 00:02:54.000 UTC  \n",
-       "1793  2024-03-10 16:22:58.000 UTC  \n",
-       "1794  2024-03-10 16:12:50.000 UTC  \n",
-       "1795  2024-02-27 17:36:59.000 UTC  \n",
-       "1796  2024-01-11 04:12:14.000 UTC  \n",
-       "\n",
-       "[1797 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "query_result_df = pd.DataFrame(query_result.result.rows)\n",
-    "query_result_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_result_df.to_csv(\"allov2_distributions_oct22_2024.csv\", index=False)"
+    "    # Initialize Dune client and get query results\n",
+    "    DUNE_API_KEY = os.getenv('DUNE_API_KEY')\n",
+    "    logger.info(\"Initializing Dune client\")\n",
+    "    dune = DuneClient(DUNE_API_KEY)\n",
+    "    logger.info(\"Fetching latest results from query 4118421\")\n",
+    "    query_result = dune.get_latest_result(4118421)\n",
+    "    logger.info(\"Successfully retrieved query results\")\n",
+    "    query_result_df = pd.DataFrame(query_result.result.rows)\n",
+    "\n",
+    "    # Get database connection details\n",
+    "    DB_HOST = os.getenv('DB_HOST')\n",
+    "    DB_NAME = 'Grants'\n",
+    "    DB_USER = os.getenv('DB_USER')\n",
+    "    DB_PASSWORD = os.getenv('DB_PASSWORD')\n",
+    "\n",
+    "    # Create database connection\n",
+    "    db_url = f\"postgresql://{DB_USER}:{DB_PASSWORD}@{DB_HOST}/{DB_NAME}\"\n",
+    "    engine = create_engine(db_url)\n",
+    "\n",
+    "    # Upload dataframe to database\n",
+    "    table_name = 'allov2_distribution_events_for_leaderboard'\n",
+    "    query_result_df.to_sql(\n",
+    "        name=table_name,\n",
+    "        con=engine,\n",
+    "        schema='experimental_views',\n",
+    "        if_exists='replace',\n",
+    "        index=False\n",
+    "    )\n",
+    "\n",
+    "    logger.info(f\"Successfully uploaded {len(query_result_df)} rows to table {table_name}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
